# snakemake-monitoring-plugin-wms

./: pyproject.toml
snakemake_monitoring_plugin_wms/: __init__.py
